--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
     <header>
         <div class="container">
             <div class="header-content">
-                <a href="#" class="logo">IVANKA AYKOVA</a>
+                <a href="#" class="logo">IVANKA RAYKOVA - test 1</a>
                 
                 <nav>
                     <ul class="nav-desktop">
