--- a/collections/bulgarian-broderie.html
+++ b/collections/bulgarian-broderie.html
@@ -14,7 +14,7 @@
     <header>
         <div class="container">
             <div class="header-content">
-                <a href="../index.html" class="logo">IVANKA AYKOVA</a>
+                <a href="../index.html" class="logo">IVANKA RAYKOVA</a>
                 
                 <nav>
                     <ul class="nav-desktop">
