--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
     <header>
         <div class="container">
             <div class="header-content">
-                <a href="#" class="logo">IVANKA RAYKOVA</a>
+                <a href="#" class="logo">IVANKA RAYKOVA - test 7</a>
                 
                 <!-- Removed desktop navigation as requested -->
                 
