--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
             <img src="images/1.jpg" alt="Fashion Collection" class="hero-img">
             <div class="container">
                 <div class="hero-content">
-                    <h1 class="hero-title">IVANKA RAYKOVA</h1>
+                    <h1 class="hero-title">IVANKA RAYKOVA - Spanish queen</h1>
                     <p class="hero-subtitle">Contemporary Fashion with Traditional Embroidery</p>
                 </div>
             </div>
