--- a/index.html
+++ b/index.html
@@ -656,10 +656,10 @@
                   <li class="dropdown">
                      <a href="#" class="dropdown-toggle">Collections</a>
                      <div class="dropdown-content">
-                        <a href="collections/bulgarian-broderie/">Bulgarian broderie</a>
-                        <a href="collections/summer-2025.html">Summer 2025</a>
-                        <a href="collections/winter-2024.html">Winter 2024</a>
-                        <a href="collections/archive.html">Archive</a>
+                        <a href="/collections/bulgarian-broderie/">Bulgarian broderie</a>
+                        <a href="/collections/summer-2025/">Summer 2025</a>
+                        <a href="/collections/winter-2024/">Winter 2024</a>
+                        <a href="/collections/archive/">Archive</a>
                      </div>
                   </li>
                   <li><a href="#about">About</a></li>
@@ -674,10 +674,10 @@
                   <li class="dropdown-mobile">
                      <a href="#">Collections</a>
                      <ul class="mobile-submenu">
-                        <li><a href="collections/bulgarian-broderie/">Bulgarian broderie</a></li>
-                        <li><a href="collections/summer-2025.html">Summer 2025</a></li>
-                        <li><a href="collections/winter-2024.html">Winter 2024</a></li>
-                        <li><a href="collections/archive.html">Archive</a></li>
+                        <li><a href="/collections/bulgarian-broderie/">Bulgarian broderie</a></li>
+                        <li><a href="/collections/summer-2025/">Summer 2025</a></li>
+                        <li><a href="/collections/winter-2024/">Winter 2024</a></li>
+                        <li><a href="/collections/archive/">Archive</a></li>
                      </ul>
                   </li>
                   <li><a href="#about">About</a></li>
