--- a/collections/bulgarian-broderie/index.html
+++ b/collections/bulgarian-broderie/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0;url=/collections/collection-template.html">
+    <meta http-equiv="refresh" content="0;url=/collections/bulgarian-broderie/">
     <title>Loading Collection...</title>
 </head>
 
 <body>
-    <p>Loading collection... If you are not redirected, <a href="/collections/collection-template.html">click here</a>.
+    <p>Loading collection... If you are not redirected, <a href="/collections/bulgarian-broderie/">click here</a>.
     </p>
 </body>
 
