--- a/collections/bulgarian-broderie/index.html
+++ b/collections/bulgarian-broderie/index.html
@@ -18,6 +18,7 @@
     <header>
         <div class="container">
             <div class="header-content">
+                <!-- Fix the path to home page -->
                 <a href="../../index.html" class="logo">IVANKA RAYKOVA</a>
 
                 <nav>
@@ -25,6 +26,7 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle">Collections</a>
                             <div class="dropdown-content">
+                                <!-- Fix collection paths -->
                                 <a href="../bulgarian-broderie/index.html">Bulgarian broderie</a>
                                 <a href="../summer-2025/index.html">Summer 2025</a>
                                 <a href="../winter-2024/index.html">Winter 2024</a>
