--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
    <header>
       <div class="container">
          <div class="header-content">
-            <a href="#" class="logo">IVANKA RAYKOVA - deploy 9</a>
+            <a href="#" class="logo">IVANKA RAYKOVA - deploy 10</a>
             <!-- Desktop Navigation -->
             <nav>
                <ul class="nav-desktop">
@@ -702,51 +702,37 @@
    <section id="collections" class="collections">
       <div class="container">
          <h2 class="section-title">Bulgarian broderie</h2>
-         <div class="collection-grid">
-            <!-- Image 1 -->
-            <div class="collection-item">
-               <img src="images/1.jpg" alt="IVANKA RAYKOVA Collection - White embroidered dress" class="collection-img"
-                  onclick="openModal(this)">
+         <div class="collection-grid home-collection">
+            <!-- Desktop: Show first 4 images -->
+            <div class="collection-item desktop-only">
+               <a href="collections/bulgarian-broderie/index.html">
+                  <img src="images/1.jpg" alt="IVANKA RAYKOVA Collection - White embroidered dress"
+                     class="collection-img">
+               </a>
             </div>
-            <!-- Image 2 -->
-            <div class="collection-item">
-               <img src="images/2.jpg" alt="IVANKA RAYKOVA Collection - White embroidered set" class="collection-img"
-                  onclick="openModal(this)">
+            <div class="collection-item desktop-only">
+               <a href="collections/bulgarian-broderie/index.html">
+                  <img src="images/2.jpg" alt="IVANKA RAYKOVA Collection - White embroidered set"
+                     class="collection-img">
+               </a>
             </div>
-            <!-- Image 3 -->
-            <div class="collection-item">
-               <img src="images/3.jpg" alt="IVANKA RAYKOVA Collection - White embroidered outfit" class="collection-img"
-                  onclick="openModal(this)">
+            <div class="collection-item desktop-only">
+               <a href="collections/bulgarian-broderie/index.html">
+                  <img src="images/3.jpg" alt="IVANKA RAYKOVA Collection - White embroidered outfit"
+                     class="collection-img">
+               </a>
             </div>
-            <!-- Image 4 -->
-            <div class="collection-item">
-               <img src="images/4.jpg" alt="IVANKA RAYKOVA Collection - White tailored outfit" class="collection-img"
-                  onclick="openModal(this)">
+            <div class="collection-item desktop-only">
+               <a href="collections/bulgarian-broderie/index.html">
+                  <img src="images/4.jpg" alt="IVANKA RAYKOVA Collection" class="collection-img">
+               </a>
             </div>
-            <!-- Image 5 -->
-            <div class="collection-item">
-               <img src="images/5.jpg" alt="IVANKA RAYKOVA Collection - White embroidered tunic" class="collection-img"
-                  onclick="openModal(this)">
-            </div>
-            <!-- Image 6 -->
-            <div class="collection-item">
-               <img src="images/6.jpg" alt="IVANKA RAYKOVA Collection - Beige embroidered outfit" class="collection-img"
-                  onclick="openModal(this)">
-            </div>
-            <!-- Image 7 -->
-            <div class="collection-item">
-               <img src="images/7.jpg" alt="IVANKA RAYKOVA Collection - Beige embroidered dress" class="collection-img"
-                  onclick="openModal(this)">
-            </div>
-            <!-- Image 8 -->
-            <div class="collection-item">
-               <img src="images/8.jpg" alt="IVANKA RAYKOVA Collection - Men's white suit" class="collection-img"
-                  onclick="openModal(this)">
-            </div>
-            <!-- Image 9 -->
-            <div class="collection-item">
-               <img src="images/9.jpg" alt="IVANKA RAYKOVA Collection - Men's beige suit" class="collection-img"
-                  onclick="openModal(this)">
+
+            <!-- Mobile: Show only first image -->
+            <div class="collection-item mobile-only">
+               <a href="collections/bulgarian-broderie/index.html">
+                  <img src="images/1.jpg" alt="IVANKA RAYKOVA Collection - Bulgarian broderie" class="collection-img">
+               </a>
             </div>
          </div>
          <!-- Modal for image zoom -->
