--- a/index.html
+++ b/index.html
@@ -702,8 +702,22 @@
    <section id="collections" class="collections">
       <div class="container">
          <h2 class="section-title">Bulgarian broderie</h2>
-         <div class="collection-grid home-collection" id="home-collection-grid">
-            <!-- Images will be loaded dynamically -->
+         <div class="collection-grid home-collection">
+            <div class="collection-item" onclick="window.location.href='collections/bulgarian-broderie/index.html'">
+               <img src="images/1.jpg" alt="Bulgarian broderie collection" class="collection-img">
+            </div>
+            <div class="collection-item desktop-only"
+               onclick="window.location.href='collections/bulgarian-broderie/index.html'">
+               <img src="images/2.jpg" alt="Bulgarian broderie collection" class="collection-img">
+            </div>
+            <div class="collection-item desktop-only"
+               onclick="window.location.href='collections/bulgarian-broderie/index.html'">
+               <img src="images/3.jpg" alt="Bulgarian broderie collection" class="collection-img">
+            </div>
+            <div class="collection-item desktop-only"
+               onclick="window.location.href='collections/bulgarian-broderie/index.html'">
+               <img src="images/4.jpg" alt="Bulgarian broderie collection" class="collection-img">
+            </div>
          </div>
       </div>
    </section>
