--- a/index.html
+++ b/index.html
@@ -706,17 +706,8 @@
             <div class="collection-item" onclick="window.location.href='collections/bulgarian-broderie/index.html'">
                <img src="images/1.jpg" alt="Bulgarian broderie collection" class="collection-img">
             </div>
-            <div class="collection-item desktop-only"
-               onclick="window.location.href='collections/bulgarian-broderie/index.html'">
+            <div class="collection-item" onclick="window.location.href='collections/bulgarian-broderie/index.html'">
                <img src="images/2.jpg" alt="Bulgarian broderie collection" class="collection-img">
-            </div>
-            <div class="collection-item desktop-only"
-               onclick="window.location.href='collections/bulgarian-broderie/index.html'">
-               <img src="images/3.jpg" alt="Bulgarian broderie collection" class="collection-img">
-            </div>
-            <div class="collection-item desktop-only"
-               onclick="window.location.href='collections/bulgarian-broderie/index.html'">
-               <img src="images/4.jpg" alt="Bulgarian broderie collection" class="collection-img">
             </div>
          </div>
       </div>
