--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
    <header>
       <div class="container">
          <div class="header-content">
-            <a href="#" class="logo">IVANKA RAYKOVA - deploy 17</a>
+            <a href="#" class="logo">IVANKA RAYKOVA - deploy 18</a>
             <!-- Desktop Navigation -->
             <nav>
                <ul class="nav-desktop">
@@ -703,36 +703,26 @@
       <div class="container">
          <h2 class="section-title">Bulgarian broderie</h2>
          <div class="collection-grid home-collection">
+            <!-- This one shows on both mobile and desktop -->
             <div class="collection-item" onclick="window.location.href='collections/bulgarian-broderie/index.html'">
                <img src="images/1.jpg" alt="Bulgarian broderie collection" class="collection-img">
             </div>
-            <div class="collection-item" onclick="window.location.href='collections/bulgarian-broderie/index.html'">
+            <!-- These three only show on desktop -->
+            <div class="collection-item desktop-only"
+               onclick="window.location.href='collections/bulgarian-broderie/index.html'">
                <img src="images/2.jpg" alt="Bulgarian broderie collection" class="collection-img">
+            </div>
+            <div class="collection-item desktop-only"
+               onclick="window.location.href='collections/bulgarian-broderie/index.html'">
+               <img src="images/3.jpg" alt="Bulgarian broderie collection" class="collection-img">
+            </div>
+            <div class="collection-item desktop-only"
+               onclick="window.location.href='collections/bulgarian-broderie/index.html'">
+               <img src="images/4.jpg" alt="Bulgarian broderie collection" class="collection-img">
             </div>
          </div>
       </div>
    </section>
-   <!-- Product Detail View -->
-   <div class="product-detail" id="product-detail">
-      <span class="close-detail" onclick="closeDetail()">&times;</span>
-      <div class="detail-container">
-         <div class="detail-image">
-            <img id="detail-img" src="" alt="">
-         </div>
-         <div class="detail-info">
-            <h2 class="detail-title" id="detail-title"></h2>
-            <div class="detail-description" id="detail-description"></div>
-            <div class="detail-specs">
-               <p class="spec-title">Material Composition:</p>
-               <p id="detail-material"></p>
-               <p class="spec-title">Fabric:</p>
-               <p id="detail-fabric"></p>
-               <p class="spec-title">Craftsmanship:</p>
-               <p id="detail-craftsmanship"></p>
-            </div>
-         </div>
-      </div>
-   </div>
    <!-- About -->
    <section id="about" class="about">
       <div class="container">
