--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
    <header>
       <div class="container">
          <div class="header-content">
-            <a href="#" class="logo">IVANKA RAYKOVA - deploy 20</a>
+            <a href="#" class="logo">IVANKA RAYKOVA - deploy 21</a>
             <!-- Desktop Navigation -->
             <nav>
                <ul class="nav-desktop">
@@ -702,24 +702,8 @@
    <section id="collections" class="collections">
       <div class="container">
          <h2 class="section-title">Bulgarian broderie</h2>
-         <div class="collection-grid home-collection">
-            <!-- This one shows on both mobile and desktop -->
-            <div class="collection-item" onclick="window.location.href='collections/bulgarian-broderie/index.html'">
-               <img src="images/1.jpg" alt="Bulgarian broderie collection" class="collection-img">
-            </div>
-            <!-- These three only show on desktop -->
-            <div class="collection-item desktop-only"
-               onclick="window.location.href='collections/bulgarian-broderie/index.html'">
-               <img src="images/2.jpg" alt="Bulgarian broderie collection" class="collection-img">
-            </div>
-            <div class="collection-item desktop-only"
-               onclick="window.location.href='collections/bulgarian-broderie/index.html'">
-               <img src="images/3.jpg" alt="Bulgarian broderie collection" class="collection-img">
-            </div>
-            <div class="collection-item desktop-only"
-               onclick="window.location.href='collections/bulgarian-broderie/index.html'">
-               <img src="images/4.jpg" alt="Bulgarian broderie collection" class="collection-img">
-            </div>
+         <div id="home-collection-grid" class="collection-grid home-collection">
+            <!-- Content will be dynamically loaded by JavaScript -->
          </div>
       </div>
    </section>
