--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
    <header>
       <div class="container">
          <div class="header-content">
-            <a href="#" class="logo">IVANKA RAYKOVA - deploy 21</a>
+            <a href="#" class="logo">IVANKA RAYKOVA - deploy 22</a>
             <!-- Desktop Navigation -->
             <nav>
                <ul class="nav-desktop">
@@ -702,8 +702,25 @@
    <section id="collections" class="collections">
       <div class="container">
          <h2 class="section-title">Bulgarian broderie</h2>
-         <div id="home-collection-grid" class="collection-grid home-collection">
-            <!-- Content will be dynamically loaded by JavaScript -->
+         <div class="collection-grid home-collection">
+            <!-- First item (visible on both mobile and desktop) -->
+            <div class="collection-item main-item">
+               <img src="collections/bulgarian-broderie/images/1.jpg" alt="Bulgarian broderie collection"
+                  class="collection-img" onclick="window.location.href='collections/bulgarian-broderie/index.html'">
+            </div>
+            <!-- Additional items (visible only on desktop) -->
+            <div class="collection-item desktop-only">
+               <img src="collections/bulgarian-broderie/images/2.jpg" alt="Bulgarian broderie collection"
+                  class="collection-img" onclick="window.location.href='collections/bulgarian-broderie/index.html'">
+            </div>
+            <div class="collection-item desktop-only">
+               <img src="collections/bulgarian-broderie/images/3.jpg" alt="Bulgarian broderie collection"
+                  class="collection-img" onclick="window.location.href='collections/bulgarian-broderie/index.html'">
+            </div>
+            <div class="collection-item desktop-only">
+               <img src="collections/bulgarian-broderie/images/4.jpg" alt="Bulgarian broderie collection"
+                  class="collection-img" onclick="window.location.href='collections/bulgarian-broderie/index.html'">
+            </div>
          </div>
       </div>
    </section>
