--- a/collections/bulgarian-broderie/index.html
+++ b/collections/bulgarian-broderie/index.html
@@ -82,7 +82,7 @@
 
     <!-- Product Detail View -->
     <div class="product-detail" id="product-detail">
-        <span class="close-detail" onclick="closeDetail()">&times;</span>
+        <button class="close-detail" onclick="closeDetail()">&times;</button>
         <div class="detail-container">
             <div class="detail-image">
                 <img id="detail-img" src="" alt="">
@@ -90,14 +90,11 @@
             <div class="detail-info">
                 <h2 class="detail-title" id="detail-title"></h2>
                 <div class="detail-description" id="detail-description"></div>
-
                 <div class="detail-specs">
                     <p class="spec-title">Material Composition:</p>
                     <p id="detail-material"></p>
-
                     <p class="spec-title">Fabric:</p>
                     <p id="detail-fabric"></p>
-
                     <p class="spec-title">Craftsmanship:</p>
                     <p id="detail-craftsmanship"></p>
                 </div>
