--- a/collections/bulgarian-broderie/index.html
+++ b/collections/bulgarian-broderie/index.html
@@ -82,7 +82,7 @@
 
     <!-- Product Detail View -->
     <div class="product-detail" id="product-detail">
-        <button class="close-detail" onclick="closeDetail()">&times;</button>
+        <button class="close-detail" id="closeDetailBtn">&times;</button>
         <div class="detail-container">
             <div class="detail-image">
                 <img id="detail-img" src="" alt="">
