--- a/collections/bulgarian-broderie/index.html
+++ b/collections/bulgarian-broderie/index.html
@@ -17,6 +17,24 @@
 </head>
 
 <body>
+    <!-- Add just the mobile menu -->
+    <button class="mobile-nav-toggle">≡</button>
+    <div class="mobile-nav">
+        <ul>
+            <li class="dropdown-mobile">
+                <a href="#">Collections</a>
+                <ul class="mobile-submenu">
+                    <li><a href="../bulgarian-broderie/">Bulgarian broderie</a></li>
+                    <li><a href="">Summer 2025</a></li>
+                    <li><a href="">Winter 2024</a></li>
+                </ul>
+            </li>
+            <li><a href="../../index.html#about">About</a></li>
+            <li><a href="../../index.html#atelier">Atelier</a></li>
+            <li><a href="../../index.html#contact">Contact</a></li>
+        </ul>
+    </div>
+
     <!-- Collection Page Content -->
     <section class="collection-page">
         <div class="container">
@@ -110,6 +128,24 @@
     </footer>
 
     <script src="../../scripts/collection-template.js"></script>
+    <script>
+        // Mobile Navigation Toggle
+        const mobileNavToggle = document.querySelector('.mobile-nav-toggle');
+        const mobileNav = document.querySelector('.mobile-nav');
+
+        mobileNavToggle.addEventListener('click', () => {
+            mobileNav.classList.toggle('active');
+        });
+
+        // Mobile Dropdown Toggle
+        document.querySelectorAll('.dropdown-mobile > a').forEach(item => {
+            item.addEventListener('click', (e) => {
+                e.preventDefault();
+                const submenu = item.nextElementSibling;
+                submenu.classList.toggle('active');
+            });
+        });
+    </script>
 </body>
 
 </html>
