--- a/collections/bulgarian-broderie/index.html
+++ b/collections/bulgarian-broderie/index.html
@@ -17,23 +17,47 @@
 </head>
 
 <body>
-    <!-- Add just the mobile menu -->
-    <button class="mobile-nav-toggle">≡</button>
-    <div class="mobile-nav">
-        <ul>
-            <li class="dropdown-mobile">
-                <a href="#">Collections</a>
-                <ul class="mobile-submenu">
-                    <li><a href="../bulgarian-broderie/">Bulgarian broderie</a></li>
-                    <li><a href="">Summer 2025</a></li>
-                    <li><a href="">Winter 2024</a></li>
-                </ul>
-            </li>
-            <li><a href="../../index.html#about">About</a></li>
-            <li><a href="../../index.html#atelier">Atelier</a></li>
-            <li><a href="../../index.html#contact">Contact</a></li>
-        </ul>
-    </div>
+    <!-- Header -->
+    <header>
+        <div class="container">
+            <div class="header-content">
+                <a href="../../index.html" class="logo">IVANKA RAYKOVA</a>
+                <!-- Desktop Navigation -->
+                <nav>
+                    <ul class="nav-desktop">
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle">Collections</a>
+                            <div class="dropdown-content">
+                                <a href="../bulgarian-broderie/">Bulgarian broderie</a>
+                                <a href="">Summer 2025</a>
+                                <a href="">Winter 2024</a>
+                            </div>
+                        </li>
+                        <li><a href="../../index.html#about">About</a></li>
+                        <li><a href="../../index.html#atelier">Atelier</a></li>
+                        <li><a href="../../index.html#contact">Contact</a></li>
+                    </ul>
+                </nav>
+                <!-- Mobile toggle navigation -->
+                <button class="mobile-nav-toggle">≡</button>
+                <div class="mobile-nav">
+                    <ul>
+                        <li class="dropdown-mobile">
+                            <a href="#">Collections</a>
+                            <ul class="mobile-submenu">
+                                <li><a href="../bulgarian-broderie/">Bulgarian broderie</a></li>
+                                <li><a href="">Summer 2025</a></li>
+                                <li><a href="">Winter 2024</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="../../index.html#about">About</a></li>
+                        <li><a href="../../index.html#atelier">Atelier</a></li>
+                        <li><a href="../../index.html#contact">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </header>
 
     <!-- Collection Page Content -->
     <section class="collection-page">
