--- a/collections/bulgarian-broderie/index.html
+++ b/collections/bulgarian-broderie/index.html
@@ -159,15 +159,33 @@
 
         mobileNavToggle.addEventListener('click', () => {
             mobileNav.classList.toggle('active');
+            mobileNavToggle.textContent = mobileNav.classList.contains('active') ? '×' : '≡';
         });
 
         // Mobile Dropdown Toggle
-        document.querySelectorAll('.dropdown-mobile > a').forEach(item => {
-            item.addEventListener('click', (e) => {
-                e.preventDefault();
-                const submenu = item.nextElementSibling;
-                submenu.classList.toggle('active');
+        const dropdownMobile = document.querySelector('.dropdown-mobile');
+        dropdownMobile.addEventListener('click', (e) => {
+            e.preventDefault();
+            dropdownMobile.classList.toggle('active');
+        });
+
+        // Close mobile nav when clicking a link (except dropdown)
+        const mobileNavLinks = document.querySelectorAll('.mobile-nav a:not(.dropdown-mobile > a)');
+        mobileNavLinks.forEach(link => {
+            link.addEventListener('click', () => {
+                mobileNav.classList.remove('active');
+                mobileNavToggle.textContent = '≡';
             });
+        });
+
+        // Header scroll effect
+        const header = document.querySelector('header');
+        window.addEventListener('scroll', () => {
+            if (window.scrollY > 50) {
+                header.style.boxShadow = '0 2px 10px rgba(0, 0, 0, 0.1)';
+            } else {
+                header.style.boxShadow = 'none';
+            }
         });
     </script>
 </body>
